@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-01-15:
+
+- Fixed a bug, introduced in ksh93q+ 2005-05-22, that stopped an append
+  assignment from working together with a declaration command. For example,
+  'typeset var+=value' or 'export var+=value' now again work as expected.
+
 2024-01-14:
 
 - Fixed a regression introduced on 2022-11-01 that caused ksh to enter
